[package]
name = "abbrev-tree"
version = "0.1.1"
authors = ["ashtneoi <ashtneoi@gmail.com>"]
edition = "2018"
license = "MIT"
description = "highly inefficient data structure for text completion"
homepage = "https://github.com/ashtneoi/abbrev-tree"
repository = "https://github.com/ashtneoi/abbrev-tree"
keywords = ["completion"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0.89", features = ["derive"], optional = true }
